# ChangeLog for net-fs/netatalk
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/netatalk/ChangeLog,v 1.62 2010/04/01 17:16:34 armin76 Exp $

  01 Apr 2010; Raúl Porcel <armin76@gentoo.org> netatalk-2.0.5-r1.ebuild:
  sh/sparc stable wrt #252210

  09 Mar 2010; Joseph Jezak <josejx@gentoo.org> netatalk-2.0.5-r1.ebuild:
  Marked ppc stable for bug #252210.

  08 Mar 2010; Brent Baude <ranger@gentoo.org> netatalk-2.0.5-r1.ebuild:
  Marking netatalk-2.0.5-r1 ppc64 for bug 252210

  06 Mar 2010; Markus Meier <maekke@gentoo.org> netatalk-2.0.5-r1.ebuild:
  amd64/arm stable, bug #252210

  05 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  netatalk-2.0.5-r1.ebuild:
  stable x86, security bug 252210

*netatalk-2.0.5-r1 (11 Jan 2010)

  11 Jan 2010; Doug Goldstein <cardoe@gentoo.org> +netatalk-2.0.5-r1.ebuild:
  EAPI=2 version. fix the paths in the installed headers since we change the
  location they're installing to

*netatalk-2.0.5 (10 Jan 2010)

  10 Jan 2010; Mike Frysinger <vapier@gentoo.org> +netatalk-2.0.5.ebuild,
  +files/netatalk-2.0.5-control-pam.patch:
  Version bump #279057 and block app-text/yudit #247972.

  21 May 2009; Brent Baude <ranger@gentoo.org> netatalk-2.0.3-r4.ebuild:
  stable ppc, bug 265037

  21 Apr 2009; Raúl Porcel <armin76@gentoo.org> netatalk-2.0.3-r4.ebuild:
  arm/sh/sparc stable wrt #265037

  18 Apr 2009; Markus Meier <maekke@gentoo.org> netatalk-2.0.3-r4:
  amd64/x86 stable, bug #265037

  14 Apr 2009; Brent Baude <ranger@gentoo.org> netatalk-2.0.3-r4.ebuild:
  Marking netatalk-2.0.3-r4 ppc64 for bug 265037

*netatalk-2.0.3-r4 (15 Mar 2009)

  15 Mar 2009; Mike Frysinger <vapier@gentoo.org> +netatalk-2.0.3-r4.ebuild:
  Drop bindnow flags #227001 by Diego E. Pettenò, stop installing the
  timeout program as coreutils does it now #259870 by Willard Dawson, and
  cleanup the ebuild in general.

  14 Mar 2009; Raúl Porcel <armin76@gentoo.org> netatalk-2.0.3-r3.ebuild: