@@ -1,12 +1,17 @@
-AUX netatalk-2.0.3-db43.patch 1224 RMD160 ee8d1e0f3a5abc07f28d26d266fdb55f791bee91 SHA1 0c7278172da52c48a4f85d4ef8307b50c194f99f SHA256 1b731d6b89beb704a4787a9ec4f6c32e1bec7e39904f3c6edb6100d62659c879
-AUX netatalk-2.0.3-newerdb.patch 1183 RMD160 2ae908649d8fa44c436ab8725b57b7d481baf6f1 SHA1 e7e94bf36285c1839bb2e4bc6c2fca527ab8843d SHA256 ca4b6de8f536ac715e4afd15e06dc57155e443a3033383d61762545b93d4a83c
-AUX netatalk-2.0.3-setXid.patch 545 RMD160 2494b98895e2ea7a685959efce1f45534ee096e1 SHA1 6e86c7d4e80eefecbab548dadcc60b8775ee1960 SHA256 9a148e2e1d8fcb86e3a01ac2172e3e369c6b5081bd6f551296820f463d946e7c
-AUX netatalk-2.0.3-xfs.patch 774 RMD160 167f548f97666755fd428467fbee564ad99d26e5 SHA1 ead0b7cb2e0e623cdcb9656cc407fe6a10967e3e SHA256 dfb181612425dfda8f3b94f4a9f6705cd27be3a65a313f5c39d64dc9bdb391d4
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX netatalk-2.0.5-control-pam.patch 997 RMD160 a7b11647dd7827288517fa3c7696a37182ec219e SHA1 113f318c15870c6638da6a8a76033d954ca6b41a SHA256 4cf74450782f9f6395436d1d433d4d4662ea63fad48961dacec76adafdd35f47
-DIST netatalk-2.0.3.tar.bz2 1471804 RMD160 29b763400a45797ac4a8e499d5328aa91a091c91 SHA1 ce2d5dd123467ccae72fc62ca4ee3738019455f2 SHA256 25e004732f471de0dd9a21ab129ee799da018fce3b313d4ab5e6f52e6e9e3998
 DIST netatalk-2.0.5.tar.bz2 993882 RMD160 47247d376bf421652d9f9897c75853424215ae0a SHA1 a38f98abc123b02d26628543e393a4de04481e4f SHA256 aa11b26ad5c6cfb6043458fc849ed82b13b6d13219191a6335fce1bc76288b37
-EBUILD netatalk-2.0.3-r4.ebuild 3021 RMD160 741dad45a10482731139b4d66a799ff5cf7aad66 SHA1 8e0b0678e678ef985e7a72e3259664f773a0719e SHA256 52a16a4edafb58fc63e06a62a173f4a5a8cbe42a8b2c5c64ba7551a88589ae37
+DIST netatalk-2.1.tar.bz2 1120025 RMD160 c71e3b48bdb1fa1ab8acd2f78d39eb7cd8e953a3 SHA1 2c44829c5dfbacf0996db804d8b136396e16e87d SHA256 7302b06096dd915e8cf066275e7f0fa1da982cceb234975a274b92f3f56d753c
 EBUILD netatalk-2.0.5-r1.ebuild 3030 RMD160 431dbfd9147535cb44fcd0726e96e94ea9ab2641 SHA1 5d86c40a646a9737b504b2f60af126c90e76cee1 SHA256 14ade49a72ef8445d435d08ea36323a4c072097d78511fbf643d097081772b7d
-EBUILD netatalk-2.0.5.ebuild 2954 RMD160 6887b1be843a2def83dbd2db75a80449e0e47cdd SHA1 2cfa06bbaaae1a36bfdd61acca1155c9512c8fca SHA256 1b945a0e93fad82882a151922fa3a3c84bb73eaf5abffc99527b5d0860f3bddb
-MISC ChangeLog 9871 RMD160 430569eb6f8b463ac4849615a77c36853ab7c846 SHA1 2b9fc68fd7a52200bb44d7766640d9666b1c5025 SHA256 0904526abdd85fad78329a89871d9931510af7854ba4961065586d698b657c72
+EBUILD netatalk-2.1.ebuild 2980 RMD160 1a7e2e9085cdaa422fc50afc48ff088c528187a6 SHA1 0fc43ee37955f1d05ed415f5d1f885da410b0731 SHA256 dc6ab132b040ff79e1090a63054dc5bdb772b6feb9e795cf1807f907dc8c4f5f
+MISC ChangeLog 10016 RMD160 630b2f1a38300c796ccd3d7820f766a57bee863f SHA1 3fbfe38ae5a69bfcd07005e48dc95f712e1f8f26 SHA256 f9d6418989eaf82ff7214b84e208f45caa53dd5b672670677ba4c9eff502d8c6
 MISC metadata.xml 321 RMD160 4cf5a812670dc659b0325e35aa5813f24a8e7499 SHA1 bc376e37383b2f1876644258113fc0e954f8b5f0 SHA256 1f2660dd2dd2f8a210ed6df840e16e23bc9a19d5777a3776cbaecad689bcdeee
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iF4EAREIAAYFAkvloKcACgkQTwhj9JtAlp6NZQD8CmoA/nh/y0GfvsQ53GQyotv9
+UnYzlCueN0a71gL7ZxwBALemcnr99Moult5FHiEr7VprxlGbjzQdOvbKZIRNWl8k
+=+r1h
+-----END PGP SIGNATURE-----
