@@ -1,6 +1,11 @@
 # ChangeLog for net-fs/netatalk
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/netatalk/ChangeLog,v 1.62 2010/04/01 17:16:34 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/netatalk/ChangeLog,v 1.63 2010/05/08 17:34:29 vapier Exp $
+
+*netatalk-2.1 (08 May 2010)
+
+  08 May 2010; Mike Frysinger <vapier@gentoo.org> +netatalk-2.1.ebuild:
+  Version bump #318849 by Russell Knighton.
 
   01 Apr 2010; Raúl Porcel <armin76@gentoo.org> netatalk-2.0.5-r1.ebuild:
   sh/sparc stable wrt #252210
